# dbt-local-warehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/workflows/: ci.yml
macros/: cents_to_euros.sql  generate_schema_name.sql
models/marts/finance/: _finance.yml  fct_orders.sql  fct_payments.sql
models/marts/marketing/: _marketing.yml  customer_cohorts.sql  dim_customers.sql
models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
scripts/: generate_seeds.py
seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
snapshots/: customers_snapshot.sql
tests/: assert_fct_orders_total_matches_payments.sql  assert_payments_dont_exceed_order_threshold.sql  assert_segment_consistency.sql
